# library-fast-api

./: .coverage  .env_sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/books/: model.py  repository.py  router.py  service.py
app/core/: config.py  database.py  error_schema.py  exceptions.py  security.py
app/users/: dependencies.py  model.py  repository.py  router.py  service.py
tests/: conftest.py  test_auth.py  test_books.py
